--- a/main_service/docker-compose.yml
+++ b/main_service/docker-compose.yml
@@ -11,13 +11,17 @@ services:
     env_file:
       - ./.env.dev
     depends_on:
-      - db
-  db:
-    image: postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    ports:
-      - "5432:5432"
+      - database
+  database:
+      image: postgres
+      restart: always
+      volumes:
+        - ./postgres-data:/var/lib/postgresql/data
+      environment:
+        POSTGRES_HOST_AUTH_METHOD: trust
+        POSTGRES_PASSWORD: postgres
+      ports:
+        - 5432:5432
 
 volumes:
   postgres_data:
