--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - ./.env.dev
     depends_on:
       - postgres
+    networks:
+      - stackoverflow
   postgres:
     image: postgres
     restart: always
@@ -23,7 +25,13 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
     ports:
-      - 6544:5432
+      - 5431:5432
+    networks:
+      - stackoverflow
 
 volumes:
   postgres_data:
+
+networks:
+  stackoverflow:
+    driver: bridge
